--- a/index.html
+++ b/index.html
@@ -4,34 +4,16 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Google</title>
+    <title>Coming soon | LCO</title>
+    <link rel="stylesheet" href="/css/style.css">
 </head>
 <body>
-    <h1>Hello, Google here</h1>
-    <a href="https://www.google.com">Press here to open google web</a>
-    <p><strong>Lorem</strong> ipsum dolor sit amet, consectetur adipisicing elit. Delectus aliquid repudiandae obcaecati excepturi corporis nesciunt officiis deleniti explicabo quaerat modi?</p>
-    <img src="../images/google.jpg" width="200px" height="100px" alt="image of google icon">
-    <table border="1">
-        <tr>
-            <th rowspan="2">Student rgd</th>
-            <th colspan="6">Overall performance</th>
-            <th rowspan="2">Overall CGPA</th>
-        </tr>
-        <tr>
-            <td>sem1</td>
-            <td>sem2</td>
-            <td>sem3</td>
-            <td>sem4</td>
-            <td>sem5</td>
-            <td>sem6</td>
-        </tr>
-        <tr>
-            <td>78</td><td>79</td><td>80</td><td>82</td><td>85</td><td>84</td><td>86</td><td><b>84</b></td>
-        </tr>
-    </table>
-        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Laboriosam voluptate accusamus repudiandae, possimus delectus consectetur totam corporis quia velit ipsa? Aperiam vero, sed saepe, laborum modi dicta unde, repellendus nobis fugiat sint dolorem? Officiis impedit quam, molestias doloribus ipsa dolore consequuntur sequi? Natus perspiciatis aliquam illum saepe, repellendus aperiam repudiandae eveniet sed quos ullam molestias voluptate labore unde esse nihil quaerat nobis cum tempore, recusandae impedit sapiente. Laudantium, a mollitia nobis, accusamus animi iure rerum at quibusdam repellendus quia suscipit ullam fuga! Delectus itaque iure blanditiis placeat voluptatibus deleniti numquam nesciunt doloremque consectetur corrupti hic cumque nam amet tempora ipsum accusamus vitae, molestias ut praesentium fuga sapiente aspernatur excepturi. Reiciendis adipisci esse vel, voluptatibus molestiae iste enim totam provident magnam distinctio blanditiis consequatur nulla soluta non at. Nihil, eligendi nam nemo doloremque iusto cum aut iure iste earum, nostrum dolore ipsum id. Saepe debitis error perferendis blanditiis velit quod qui iste consequatur fugit odit praesentium expedita, assumenda porro dignissimos alias voluptas pariatur tenetur corporis nostrum labore. Sed voluptates ipsum natus sapiente facilis hic, veritatis sint quod blanditiis voluptatum itaque harum cum facere. Quidem sequi temporibus, architecto modi consectetur fugiat impedit aspernatur aperiam dolores. Iusto aperiam amet, deleniti inventore unde nisi?</p>
-        <h2>Para 2</h2>
-        <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Molestias sint ratione deserunt distinctio itaque ab laboriosam, recusandae minima libero accusantium nostrum quis ea cumque cupiditate quos sequi? Tenetur similique vitae dolorum officia dicta harum laboriosam reprehenderit fuga quibusdam, quasi provident obcaecati quae voluptate nobis! Est, rem sed! Asperiores suscipit porro, tenetur iste vitae ipsa quos veritatis atque fugiat aliquam alias? Doloremque eius ab explicabo, itaque, reprehenderit natus iure similique, molestias officia ducimus voluptatum? Voluptatem eos deleniti voluptas esse sit quo sunt blanditiis consequatur assumenda laboriosam dolorem soluta aliquam ab repellendus sapiente, praesentium eligendi facere fugiat sed mollitia, fuga pariatur harum. Maiores delectus magni et odit commodi esse ad dolorum, ex odio velit perspiciatis sit soluta quos explicabo aut unde quisquam quia asperiores aspernatur. Commodi beatae error a adipisci laborum. Est ducimus corporis sint repellat laudantium totam harum voluptatum nihil maxime ad, rem ex fugit, voluptatibus accusamus cum, nobis ratione minima aliquid placeat enim tempore ab odio nam nisi! Doloribus dicta exercitationem eligendi ipsa? Ducimus obcaecati, aperiam soluta modi odit autem sit, vitae, voluptatibus deleniti mollitia tempore. Magni vero debitis vitae sint necessitatibus, saepe iste facilis inventore officia, laudantium numquam nihil vel neque illo possimus iure accusamus rerum beatae. Nam eos alias beatae voluptatem quae ipsam odit? Perspiciatis non cum, quaerat enim fugiat consequatur ducimus ut sapiente totam libero voluptatem, unde asperiores sint natus explicabo voluptates in aut aliquid repellat earum est? In dignissimos tenetur voluptas placeat totam rem tempore, eligendi adipisci ea, veritatis ab reiciendis suscipit enim iusto, aliquam necessitatibus architecto? Excepturi illo dolorem minus velit veritatis voluptatibus cum dignissimos distinctio nisi magni officiis amet at dolor veniam omnis, rem consequatur fuga mollitia sint aliquam in perspiciatis fugit expedita. Consequatur quas asperiores dicta quo vitae laborum dolores impedit repudiandae, quam minus! Id perferendis distinctio, natus doloremque laborum culpa totam fugiat.</p>
-    
-    </body>
+    <img src="google.jpg" alt="image">
+    <div class="banner">
+        <div class="text-container">
+            <h1>Coming soon</h1>
+        <p>This page is under construction</p>
+        </div>
+    </div>
+</body>
 </html>
